# Webscout

./: .gitignore  .txt  404.html  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LEGAL_NOTICE.md  LICENSE  LICENSE.md  MANIFEST.in  Provider.md  README.md  changelog.md  cookies.json  docker-compose.no-auth.yml  docker-compose.yml  index.html  linecounter.py  lol.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  test.py  ty.toml
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: site_removal_request.yml
.github/agents/: Docstring.agent.md  Reverse.agent.md
.github/workflows/: auto-assign-bug.yml  auto-merge-dependencies.yml  dependency-review.yml  deploy-docs.yml  lint.yml  publish-to-pypi.yml  release-with-changelog.yml  release.yml
DOCKER/: index.html
Prompts/reverse/: index.html
api-reference/: index.html
api/client/: index.html
api/providers/: index.html
api/search/: index.html
api/server/: index.html
architecture/: index.html
awesome-prompts/: index.html
cli/: index.html
client/: index.html
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
contributing/: index.html
decorators/: index.html
deployment/: index.html
docs/: DOCKER.md  README.md  api-reference.md  architecture.md  awesome-prompts.md  cli.md  client.md  contributing.md  decorators.md  deployment.md  getting-started.md  gguf.md  gitapi.md  index.md  inferno.md  litagent.md  litprinter.md  models.md  openai-api-server.md  provider-development.md  sanitize.md  scout.md  search.md  swiftcli.md  tool-calling.md  troubleshooting.md  weather.md  zeroart.md
docs/Prompts/: reverse.md
docs/api/: client.md  providers.md  search.md  server.md
docs/examples/: README.md  basic-chat.md  search-queries.md  streaming-responses.md
examples/: index.html
examples/basic-chat/: index.html
examples/streaming-responses/: index.html
getting-started/: index.html
gguf/: index.html
gitapi/: index.html
inferno/: index.html
litagent/: index.html
litprinter/: index.html
llm4free/: AIauto.py  AIbase.py  AIutel.py  Bard.py  __init__.py  __main__.py  cli.py  client.py  conversation.py  exceptions.py  model_fetcher.py  models.py  prompt_manager.py  sanitize.py  update_checker.py  utils.py  version.py
llm4free/AISEARCH/: BraveSearch.py  Perplexity.py  README.md  __init__.py  iask_search.py  monica_search.py  webpilotai_search.py
llm4free/Extra/: __init__.py  cookie_harvester.py  gguf.py  proxy_manager.py  weather.py  weather_ascii.py
llm4free/Provider/: Apriel.py  ArtingAI.py  AskaiFree.py  CohereCommand.py  EssentialAI.py  ExaAI.py  FreeAI.py  HeckAI.py  IBM.py  Jadve.py  Netwrck.py  OllamaSwarm.py  OperaAria.py  PI.py  TypliAI.py  WiseCat.py  __init__.py  ai4chat.py  elmo.py  k2think.py  llmchat.py  llmchatco.py  meta.py  searchchat.py  sonus.py  toolbaz.py  turboseek.py
llm4free/STT/: __init__.py  base.py  cohere.py  elevenlabs.py
llm4free/TTI/: __init__.py  bingimage.py  image_hosting.py  magichour.py  magicstudio.py  miragic.py  nologintool.py  onefreeai.py  perchance.py  pollinations.py  raphael.py  together.py  visualgpt.py
llm4free/TTS/: __init__.py  base.py  deepgram.py  elevenlabs.py  faster_qwen3.py  kittentts.py  luxtts.py  openai_fm.py  parler.py  pockettts.py  qwen.py  sherpa.py  stream_elements.py  ttsai.py  utils.py  xlnk.py
llm4free/litagent/: __init__.py  agent.py  constants.py
llm4free/llm/: OllamaSwarm.py  OperaAria.py  README.md  __init__.py  ai4chat.py  akashgpt.py  apriel.py  artingai.py  ayle.py  base.py  chatgpt.py  e2b.py  elmo.py  essentialai.py  exaai.py  freeai.py  freeaionline.py  freeassist.py  fuckicoding.py  gptfree.py  heckai.py  ibm.py  jadve.py  k2think.py  llmchat.py  llmchatco.py  netwrck.py  ollama_swarm.py  opera_aria.py  pi.py  sonus.py  toolbaz.py  turboseek.py  typliai.py  utils.py  wisecat.py  writecream.py
llm4free/scout/: README.md  __init__.py  utils.py
llm4free/search/: __init__.py  base.py  bing_main.py  duckduckgo_main.py  http_client.py  yahoo_main.py  yep_main.py
llm4free/server/: __init__.py  config.py  exceptions.py  providers.py  request_models.py  request_processing.py  routes.py  server.py  ui_templates.py
llm4free/swiftcli/: __init__.py  exceptions.py
llm4free/zeroart/: __init__.py  fonts.py
models/: index.html
openai-api-server/: index.html
provider-development/: index.html
sanitize/: index.html
scout/: index.html
search/: index.html  search_index.json
swiftcli/: index.html
tests/: README.md  live_test.py  test_all_providers.py  test_ayle_models.py
tests/providers/: test_AISEARCH.py  test_all_mocked.py  test_avasupernova.py  test_blackbox.py  test_brave_images.py  test_brave_text.py  test_claude_online.py  test_cohere_stt.py  test_discovery.py  test_gemini.py  test_groq.py  test_huggingface.py  test_kittentts.py  test_kyutai_comprehensive.py  test_luxtts.py  test_model_fetching.py  test_non_native_tool_calling.py  test_openai.py  test_openai_deepinfra.py  (+5 more)
tool-calling/: index.html
troubleshooting/: index.html
weather/: index.html
webscout/: AIauto.py  AIbase.py  AIutel.py  Bard.py  __init__.py  cli.py  client.py  model_fetcher.py  models.py  prompt_manager.py  sanitize.py  update_checker.py  utils.py  version.py
zeroart/: index.html
(+595 files in other folders)
