[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm4free"
# Using dynamic version from llm4free.version
dynamic = ["version"]
description = "Search for anything using Google, DuckDuckGo, phind.com, Contains AI models, can transcribe yt videos, temporary email and phone number generation, has TTS support, webai (terminal gpt and open interpreter) and offline LLMs and more"
readme = "README.md"
authors = [
    {name = "OEvortex", email = "koulabhay26@gmail.com"}
]
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Communications",
    "Topic :: Utilities",
]
keywords = [
    "search", "ai", "chatbot", "llm", "language-model", "gpt", "openai",
    "gemini", "claude", "llama", "search-engine", "text-to-speech", "tts",
    "text-to-image", "tti", "weather", "youtube", "toolkit", "utilities",
    "web-search", "duckduckgo", "google", "yep"
]
dependencies = [
    "typing_extensions>=4.0.0",
    "curl_cffi",
    "httpx",
    "tqdm",
    "packaging",
    "nest-asyncio",
    "colorama",
    "rich",
    "PyYAML",
    "html5lib",
    "psutil",
    "aiohttp",
    "litprinter",
    "lxml>=5.2.2",
    "pydantic",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "starlette>=0.50.0",
    "openai>=2.43.0",
    "pytest>=9.0.2",
    "tokenizers>=0.23.1",
    "safetensors>=0.8.0",
    "huggingface-hub>=1.20.1",
    "requests>=2.32.5",
    "mkdocs>=1.6.1",
    "mkdocstrings>=1.0.4",
    "mkdocstrings-python>=2.0.5",
    "mkdocs-material>=9.7.6",
]

[project.scripts]
WEBS = "llm4free.cli:main"
llm4free = "llm4free.cli:main"
llm4free-server = "llm4free.server.server:main"  
llm4free-serve = "llm4free.server.server:main"

[project.urls]
Source = "https://github.com/OEvortex/Webscout"
Tracker = "https://github.com/OEvortex/Webscout/issues"
YouTube = "https://youtube.com/@OEvortex"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.6",
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
]
api = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "python-multipart",
    "tiktoken",  # Added tiktoken for token counting support
    "jinja2",  # Template engine for custom Swagger UI
    "websockets>=11.0",
    "starlette",
    "regex"
]
parser = [
    "lxml>=5.2.2",  # Optional: faster HTML/XML parsing with lxml
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings>=1.0.4",
    "mkdocstrings-python>=2.0.5",
]

[tool.pytest.ini_options]
markers = [
    "live: network-dependent search engine tests",
]

[tool.coverage.run]
source = ["llm4free"]
branch = true
omit = ["tests/*", "*/__pycache__/*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 60
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]  # Specifies the root directory for packages (project root)
include = ["llm4free*"]  # Tells find_packages to include only 'llm4free' and its subpackages
exclude = ["__pycache__", "*.pyc"]  # Excludes common non-package directories/files
namespaces = true  # Enables automatic discovery of namespace packages

[tool.setuptools.dynamic]
version = {attr = "llm4free.version.__version__"}

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.yaml", "*.yml", "*.py", "*.html", "*.css", "*.js", "*.json", "*.png", "*.jpg", "*.jpeg", "*.gif", "*.svg"]
"llm4free" = ["*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "F403", "F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "llm4free/Extra/",
    "llm4free/scout/",
    "llm4free/zeroart/",
    "tests/",
]

[dependency-groups]
dev = [
    "numpy>=2.2.6",
    "vulture>=2.16",
    "mypy>=1.10.0",
]
